welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-14: error: Unmatched closing brace '}' ignored here
	}
        ^Program:-12: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Program:-8: error: illegal start of statement (no modifiers allowed here)
	override def run() { 
        ^Program:7: error: ';' expected but 'else' found.
  else{
  ^